New logos added to images folder

--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -12,7 +12,7 @@
 
             <div class="navbar-header">
                 <!-- Logo -->
-                <a class="navbar-brand" href="#"><img src="images/EarBudsLogo.png" alt="" /></a>
+                <a class="navbar-brand" href="#"><img src="images/EarBudsLogo-2.png" alt="" /></a>
 
                 <!-- Hamburger Button -->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
