--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -57,7 +57,12 @@
 
             <!-- Sign up Column -->
             <div class="col-xs-12 col-md-4">
-                <div class="well"><h2>Show the Stations Here.</h2></div>
+                <div class="well"><h2>Sign up.</h2>
+                    <form>
+                        Email: <input type="text" name="email"><br /><br />
+                        Password: <input type="text" name="password"><br /><br />
+                        Username: <input type="text" name="username"><br /><br />
+                    </form></div>
             </div>
 
         </div>
