--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -4,9 +4,13 @@
     <title>EarBuds</title>
     <link href="css/earBudsApp.css" rel="stylesheet" />
     <link href="css/bootstrap.css" rel="stylesheet" />
+    <script src="js/angular.js"></script>
+    <script src="js/angular-route.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/earBudsApp.js"></script>
 
 </head>
-<body>
+<body ng-controller="MainCtrl">
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -28,49 +32,21 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#/home">Home</a></li>
-                    <li><a href="#/Profile">Profile</a></li>
-                    <li><a href="#/Musicians">Find Musicians</a></li>
-                    <li><a href="#/Register">Sign up</a></li>
-    
+                    <li class="active"><a href="/home">Home</a></li>
+                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/musicians">Find Musicians</a></li>
+                    <li><a href="/register">Sign up</a></li>
+
                 </ul>
             </div>
 
         </div>
     </nav>
-
     <div id="mainContent" class="container">
-
-        <div class="row">
-
-            <!-- Front page info Column-->
-            <div class="col-xs-12 col-md-8">
-                <div id="home-page-info" class="info">
-                    <div class="well">
-                    <div class="jumbotron">
-                        <h1>Start a band.</h1>
-                        <h2>EarBuds helps you meet high school musicians in your area.</h2>
-                        <p>Whether you want to jam, start a casual band, or play paid gigs,
-                         EarBuds will help you find what you're looking for.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Sign up Column -->
-            <div class="col-xs-12 col-md-4">
-                <div class="well"><h2>Sign up.</h2>
-                    <form>
-                        Email: <input type="text" name="email"><br /><br />
-                        Password: <input type="text" name="password"><br /><br />
-                        Username: <input type="text" name="username"><br /><br />
-                        Age: <input type="number" name="age" > <br/><br/>
-                    </form></div>
-            </div>
-
-        </div>
-
+        <div ng-view></div>
     </div>
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
