--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="earBudsApp">
 <head>
     <title>EarBuds</title>
     <link href="css/earBudsApp.css" rel="stylesheet" />
