--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -32,10 +32,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home">Home</a></li>
-                    <li><a href="/profile">Profile</a></li>
-                    <li><a href="/musicians">Find Musicians</a></li>
-                    <li><a href="/register">Sign up</a></li>
+                    <li class="active"><a href="#/home">Home</a></li>
+                    <li><a href="#/profile">Profile</a></li>
+                    <li><a href="#/musicians">Find Musicians</a></li>
+                    <li><a href="#/register">Sign up</a></li>
 
                 </ul>
             </div>
