--- a/PageSetupExpress/PageSetupExpress/PageSetupExpress/index.html
+++ b/PageSetupExpress/PageSetupExpress/PageSetupExpress/index.html
@@ -35,7 +35,7 @@
                     <li class="active"><a href="#/home">Home</a></li>
                     <li><a href="#/profile">Profile</a></li>
                     <li><a href="#/musicians">Find Musicians</a></li>
-                    <li><a href="#/register">Sign in</a></li>
+                    <li><a href="#/register">Sign up</a></li>
 
                 </ul>
             </div>
