--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -8,6 +8,9 @@
     <script src="js/angular-route.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/earBudsApp.js"></script>
+    <script src="http://connect.soundcloud.com/sdk.js"></script>
+    <script src="//connect.soundcloud.com/sdk.js"></script>
+    <script src="js/users.js"></script>
 
 </head>
 <body ng-controller="MainCtrl">
@@ -16,10 +19,8 @@
         <div class="container">
 
             <div class="navbar-header">
-                <!-- Logo -->
                 <a class="navbar-brand" href="#"><img src="images/EarBudsLogoHeader.png" alt="" /></a>
 
-                <!-- Hamburger Button -->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -29,7 +30,6 @@
 
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#/home">Home</a></li>
