--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -11,9 +11,9 @@
     <script src="http://connect.soundcloud.com/sdk.js"></script>
     <script src="//connect.soundcloud.com/sdk.js"></script>
     <script src="js/users.js"></script>
-
 </head>
-<body ng-controller="MainCtrl">
+<body ng-controller="MainCtrl" background-color:"#000000">
+
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -42,7 +42,7 @@
 
         </div>
     </nav>
-    <div id="mainContent" class="container">
+    <div id="mainContent" class="container" color:"#000000">
         <div ng-view></div>
     </div>
 
