--- a/WebSiteTest/PageTest/index.html
+++ b/WebSiteTest/PageTest/index.html
@@ -32,10 +32,10 @@
 
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#/home">Home</a></li>
-                    <li><a href="#/profile">Profile</a></li>
-                    <li><a href="#/musicians">Find Musicians</a></li>
-                    <li><a href="#/register">Sign in</a></li>
+                    <li ng-class="{active:$route.current.activetab == 'home'}"><a href="#/home">Home</a></li>
+                    <li ng-class="{active:$route.current.activetab == 'profile'}"><a href=" #/profile">Profile</a></li>
+                    <li ng-class="{active:$route.current.activetab == 'musicians'}"><a href=" #/musicians">Find Musicians</a></li>
+                    <li ng-class="{active:$route.current.activetab == 'register'}"><a href=" #/register">Sign In</a></li>
 
                 </ul>
             </div>
